# trading-research

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  MIGRATION_MANIFEST.md  README.md  prep_migration_samples.py  pyproject.toml
.agent/rules/: AGENT.md  ARCHITECT.md  MENTOR.md  (+1 more)
.claude/: settings.local.json
configs/: broker_margins.yaml  instruments.yaml  instruments_core.yaml  retention.yaml
docs/: Tradestation-trading-symbol-list.md  git-workflow.md  pipeline.md  running-the-downloader.md
outputs/: 38-exploration-leaderboard.html  test-composite-report.html
runs/: .trials.json
scripts/: build_zn_continuous.py  run_30a_cost_sweep.py  run_31b_regime_wf.py  run_33a_v2_wf.py  verify_tradestation_auth.py
tests/: test_auth.py  test_backtest_fills.py  test_bootstrap.py  test_classifier.py  test_clean_safety.py  test_clean_trials_tiers.py  test_cli.py  test_client.py  test_clustering.py  test_context_join.py  test_continuous.py  test_correlation.py  test_data_dictionary.py  test_distribution.py  test_download.py  test_drawdowns.py  test_engine.py  test_eval_summary.py  test_event_blackout.py  test_event_study.py  test_instruments.py  test_instruments_backtest.py  test_leaderboard.py  test_logging_schema.py  test_manifest.py  test_meta_label.py  test_monte_carlo.py  test_multiframe.py  test_normalize.py  test_pipeline_integrity.py  test_portfolio.py  test_regimes.py  test_replay_charts.py  test_replay_cli.py  test_replay_data.py  test_report.py  test_resample.py  test_resample_daily.py  test_schema.py  test_shap.py  (+13 more)
(+585 files in other folders)
